--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link rel="icon" type="image/x-icon" th:href="@{/favicon.ico}">
 </head>
 <body>
-    <form id="userForm" method="post" th:action="@{/hello}">
+    <form id="userForm" method="post" th:action="@{/insert}">
         <label for="username">ID</label>
         <input type="text" id="username" name="username" maxlength="12" />
 
@@ -14,5 +15,37 @@
 
         <button type="submit" value="전송">전송</button>
     </form>
+    <h5>RESPONSE: <span id="response"></span></h5>
 </body>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+
+        document.getElementById("userForm").addEventListener('submit', function (event) {
+            event.preventDefault();
+            const form = event.target
+            const formData = new FormData(form);
+
+            fetch(form.action, {
+                method: form.method,
+                body: formData
+            })
+            .then(response => response.json())
+            .then(response => {
+                if (response.code) {
+                    throw new Error(response.message);
+                }
+
+                return response.json();
+            })
+            .then(data => {
+                document.getElementById("response").innerText = data.username;
+            })
+            .catch(error => {
+                document.getElementById("response").innerText = '';
+                alert(error);
+            });
+        });
+    });
+
+</script>
 </html>
