--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -35,7 +35,7 @@
                     throw new Error(response.message);
                 }
 
-                return response.json();
+                return response;
             })
             .then(data => {
                 document.getElementById("response").innerText = data.username;
