--- a/src/main/resources/static/css/aop/stylesheet.css
+++ b/src/main/resources/static/css/aop/stylesheet.css
@@ -178,6 +178,10 @@ form {
 }
 
 .float_label_group {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
     position: relative;
     margin-bottom: 1rem;
 }
@@ -185,7 +189,7 @@ form {
 .float_label_group label {
     position: absolute;
     pointer-events: none;
-    left: 6px;
+    left: 10px;
     top: 50%;
     transform: translateY(-50%);
     transition: 0.2s ease-out;
@@ -201,12 +205,13 @@ form {
 }
 
 .float_label_group input {
-    width: 100%;
-    padding: 20px 10px 10px 10px;
+    width: 90%;
+    padding: 20px 5px 10px 5px;
     border: 1px solid #ced4da;
     border-radius: 4px;
     transition: border-color 0.2s ease-in-out;
     font-size: 1em;
+    margin: 0 5px;
 }
 
 .float_label_group input:focus {
