로그인 CSS 수정

--- a/src/main/resources/static/css/aop/stylesheet.css
+++ b/src/main/resources/static/css/aop/stylesheet.css
@@ -88,6 +88,7 @@ th {
 /* 기본 버튼 */
 button,
 .button {
+    display: inline-block;
     font-size: 16px;
     background-color: #007bff;
     color: #fff;
