--- a/src/main/resources/static/css/aop/layout.css
+++ b/src/main/resources/static/css/aop/layout.css
@@ -139,5 +139,6 @@ footer {
 #two_buttons_group {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
     margin: 15px 0;
 }
